# resume-shortlisting-assistant

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml  run-shortlisting.sh
.github/workflows/: data-guard.yml  test.yml
examples/: README.md  jd-backend-engineer.txt  jd-customer-support.txt  jd-qa-engineer.txt  make_samples.py  sample-candidates.csv
examples/rubrics/: backend-engineer.yaml  customer-support.yaml  qa-engineer.yaml
examples/sample-resumes/: .gitkeep
src/shortlister/: cli.py  config.py  logging.py
src/shortlister/ingest/: __init__.py  csv.py
src/shortlister/parsing/: pdf.py
src/shortlister/scoring/: pipeline.py  ranking.py  rubric.py  schemas.py
src/shortlister/scoring/providers/: anthropic.py  base.py  claude_code.py  openai.py  qwen.py
src/shortlister/storage/: layout.py  manifest.py
tests/: test_anthropic_provider.py  test_claude_code_provider.py  test_ingest_csv.py  test_manifest.py  test_openai_provider.py  test_pdf.py  test_pipeline_concurrency.py  test_qwen_provider.py  test_ranking.py  test_rubric.py  test_schemas.py
