[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-shortlisting-assistant"
version = "0.1.0"
description = "Generic LLM-based resume screening pipeline — ingest a CSV + PDFs, score against a YAML rubric, output a ranked shortlist."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Sreechandra Reddy Allala" }]
keywords = [
    "hiring",
    "recruiting",
    "resume",
    "screening",
    "shortlist",
    "llm",
    "rubric",
    "claude",
    "openai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "pypdf>=4.2",
    "pdfplumber>=0.11",
    "anthropic>=0.39",
    "openai>=1.50",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/oneoakflow/resume-shortlisting-assistant"
Repository = "https://github.com/oneoakflow/resume-shortlisting-assistant"
Issues = "https://github.com/oneoakflow/resume-shortlisting-assistant/issues"

[project.scripts]
resume-shortlist = "shortlister.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
